--- a/backend/package.json
+++ b/backend/package.json
@@ -20,10 +20,11 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^10.4.22",
-    "@nestjs/config": "^4.0.2",
-    "@nestjs/core": "^10.4.22",
-    "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/common": "^11.1.12",
+    "@nestjs/config": "^2.3.4",
+    "@nestjs/core": "^11.1.12",
+    "@nestjs/platform-express": "^11.1.12",
+    "@nestjs/swagger": "^11.2.5",
     "@nestjs/typeorm": "^11.0.0",
     "axios": "^1.13.2",
     "mqtt": "^5.14.1",
@@ -31,6 +32,7 @@
     "react-router-dom": "^6.30.3",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
+    "swagger-ui-express": "^4.6.3",
     "typeorm": "^0.3.28"
   },
   "devDependencies": {
